--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,18 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+#Linux .gitignore
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
 #My own Additions
 .recommenders
 #Build Files generated when deploying code to RoboRIO
